# sparkmonitor

./: .bumpversion.cfg  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierignore  .yarnrc.yml  MANIFEST.in  README.md  install.json  package.json  prettier.config.js  pyproject.toml  setup.py  tsconfig.json  tsconfig.lab.json  tsconfig.notebook.json
.github/workflows/: build.yml  checks.yml  main.yml  publish.yml  release.yml
jupyter-config/jupyter_notebook_config.d/: sparkmonitor.json
jupyter-config/jupyter_server_config.d/: sparkmonitor.json
scalalistener/: CustomListener.scala  build.sbt
scalalistener/project/: plugins.sbt
scalalistener_spark3/: CustomListener.scala  build.sbt
scalalistener_spark4/: CustomListener.scala  build.sbt
sparkmonitor/: __init__.py  _version.py  connector.py  kernelextension.py
src/: index.ts
src/components/: cell-monitor.tsx  error-boundary.tsx  header.tsx  index.tsx  job-table.tsx  lazy-task-chart.tsx  lazy-timeline.tsx  progress-bar.tsx  task-chart.tsx  timeline.tsx
src/lab/: current-cell.ts  jupyterlab-sparkmonitor.ts  lab-cell-widget.tsx
src/lab-extension/: current-cell.ts  index.ts  jupyterlab-sparkmonitor.ts
src/notebook-extension/: currentcell.ts  entry.js  index.ts  jupyter-notebook-monitor.ts  notebook-types.d.ts  webpack.config.js
src/store/: cell.ts  index.ts  notebook.ts  spark-job.ts  spark-stage.ts  task-chart-store.ts
style/: jobtable.css  lab.css  lab.js  notebook.css  styles.css  taskdetails.css  timeline.css
tests/: test_kernelextension.py
